<resources>
    <string name="app_name">WatchAppz</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_over_watchappz">About WatchAppz</string>
    <string name="action_unhide_apps">Unhide hidden apps</string>
    <string name="hidden_apps">Hidden apps</string>


    <string name="tab_favorieten">Favorite</string>
    <string name="tab_recently_used">Recently used</string>
    <string name="tab_all_apps">All apps</string>
    <string name="app_used">Used</string>
    <string name="app_use_today">today</string>
    <string name="app_use_total">total</string>
    <string name="app_sorts_gebruikt">Sort apps on most used</string>
    <string name="app_sorts_gebruikt_menu">Sort on most used</string>
    <string name="app_sorts_drag_favorite_sort">Drag and drop sort</string>
    <string name="app_sorts_default_menu">Default sort</string>
    <string name="app_sorts_data">Sort apps on data usage</string>
    <string name="app_sorts_data_menu">Sort on data usage</string>
    <string name="app_sorts_minste_gebruikt">Sort apps on lowest use</string>
    <string name="app_favorites_empty_view">No Favorite Apps</string>
    <string name="app_resently_used_empty_view">No Resently used Apps</string>
    <string name="app_hidden_empty_view">No hidden apps</string>
    <string name="app_all_empty_view">No Apps</string>
    <string name="app_version">Version</string>
    <string name="app_favorite_remove">Remove</string>
    <string name="app_favorite_add">Add</string>
    <string name="app_sort_default">Default</string>
    <string name="app_sort_drag">Drag and Drop</string>
    <string name="app_sort_data">Data</string>
    <string name="app_sort_recent">Recent</string>
    <string name="app_sort_time_used">Time used</string>
    <string name="app_time_used_seconds">seconds</string>
    <string name="app_time_used_minutes">minutes</string>
    <string name="app_time_used_hours">hours</string>
    <string name="app_time_used_days">days</string>
    <string name="app_time_used_years">years</string>
    <string name="app_time_last_used_not">not</string>
    <string name="app_widget_name">Recently apps widget</string>

    <string name="help_info">Some text, Some text, Some text, Some text, Some text, Some text, Some text,
    Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text,
    Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text,
    Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text,
    Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text,
    Some text, Some text, Some text, Some text, Some text, Some text, Some text, Some text, </string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search...</string>

    <string name="facebook_app_id">1537942619829861</string>
    <string name="facebook_empty_favorite_apps">Not enough favorite apps to share</string>
    <string name="delete_apps">Delete Apps</string>
    <string name="selected_apps">selected apps</string>
    <string name="unhide_apps">Unhide</string>
    <string name="hide_apps">Hide apps</string>
    <string name="hide_apps_yes">Yes</string>
    <string name="hide_apps_no">No</string>
    <string name="hide_apps_dialog_content">Do you want to hide selected apps?</string>

</resources>
