<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/menu_search"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_data"
        android:orderInCategory="100"
        android:title="@string/app_sorts_data_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_most_used"
        android:orderInCategory="100"
        android:title="@string/app_sorts_gebruikt_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_over_watchappz"
        android:orderInCategory="100"
        android:title="@string/action_over_watchappz"
        app:showAsAction="never" />
</menu>
