<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:id="@+id/tlSliding_tabs_AM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textAllCaps="false"
        android:textColor="?android:textColorSecondary"
        android:textSize="12sp"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/textColorPrimary"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/textColorPrimary"
        app:tabTextColor="@color/tab_text_color"
        app:textAllCaps="false" />

    <LinearLayout
        android:id="@+id/llSortTabLayout_FVP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llDefault_FVP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/sort_tab_bg_selector"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDefault_FVP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/app_sort_default"
                android:textStyle="bold"
                android:textColor="@drawable/sort_tab_title_selector"
                android:layout_weight="2"/>

            <ImageView
                android:id="@+id/ivArrowDefault_FVP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_up_selector"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginRight="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llData_FVP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/sort_tab_bg_selector"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvData_FVP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/app_sort_data"
                android:textStyle="bold"
                android:textColor="@drawable/sort_tab_title_selector"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/ivArrowData_FVP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_up_selector"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginRight="5dp"/>
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:id="@+id/llRecent_FVP"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_marginRight="2dp"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@color/sort_tab_layout_background"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/tvRecent_FVP"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_margin="5dp"-->
                <!--android:text="@string/app_sort_recent"-->
                <!--android:textStyle="bold" />-->

            <!--<ImageView-->
                <!--android:id="@+id/ivArrowRecent_FVP"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_arrow_grey_up"-->
                <!--android:layout_gravity="center_vertical"/>-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:id="@+id/llTime_FVP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/sort_tab_bg_selector"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTime_FVP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/app_sort_time_used"
                android:textStyle="bold"
                android:textColor="@drawable/sort_tab_title_selector"
                android:layout_weight="4"/>

            <ImageView
                android:id="@+id/ivArrowTime_FVP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_up_selector"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginRight="5dp"/>
        </LinearLayout>
    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_AM"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white" />

</LinearLayout>